Updated 'zerofoiegras/index.html' via CloudCannon

--- a/zerofoiegras/index.html
+++ b/zerofoiegras/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta property="og:url"           content="http://action.welfarm.fr/zerofoiegras" />
+	<meta property="og:url"           content="http://action.welfarm.fr/challenge" />
 	<meta property="og:type"          content="Website" />
 	<meta property="og:title"         content="Je participe au challenge ZEROFOIEGRAS.FR" />
 	<meta property="og:description"   content="En France, chaque année, 35 millions de canards sont gavés dans d’horribles souffrances pour la production de foie gras, de magrets et confits… j’agis" />
@@ -321,7 +321,7 @@
 				<div class="row">
 					<div class="column small-centered small-10 medium-10 large-10">
 						<div style="color: white;font-family: 'Helvetica';font-size: 14px;text-align: center;">
-							<p style="font-weight: bold;font-size: 20px;line-height: 1.2;">Depuis 1984, Welfarm agit pour améliorer le bien&#8209;être des animaux d'élevage à toutes les étapes de leur vie (élevage, transport, abattage).</p>
+							<p style="font-weight: bold;font-size: 20px;line-height: 1.2;">Depuis 1994, Welfarm agit pour améliorer le bien&#8209;être des animaux d'élevage à toutes les étapes de leur vie (élevage, transport, abattage).</p>
 							<p style="font-weight: bold;font-size: 20px;line-height: 1.2;">Agir avec Welfarm, c'est :</p>
 							<p style="line-height: 1.2;font-size: 16px;">- Lutter contre l'élevage intensif et ses dérives</p>
 							<p style="line-height: 1.2;font-size: 16px;">- Contribuer à l'amélioration des conditions de vie des animaux</p>
@@ -362,8 +362,8 @@
 			FB.ui({
 				method: 'share',
 				display: 'popup',
-				quote: "Je viens de m'engager à passer des fêtes sans foie gras.Vous aussi, relevez le défi #ZéroFoieGras. RDV sur http://bit.ly/ZeroFoieGras !",
-				href: 'http://action.welfarm.fr/zerofoiegras',
+				quote: "Je viens de m'engager à passer des fêtes sans foie gras. Vous aussi, relevez le défi #ZéroFoieGras. RDV sur http://bit.ly/ZeroFoieGras !",
+				href: 'http://action.welfarm.fr/challenge',
 			}, function(response){});
 		}
 
