Updated 'challenge/index.html' via CloudCannon

--- a/challenge/index.html
+++ b/challenge/index.html
@@ -324,7 +324,7 @@
 							<p style="font-weight: bold;font-size: 20px;line-height: 1.2;">Depuis 1994, Welfarm agit pour améliorer le bien&#8209;être des animaux d'élevage à toutes les étapes de leur vie (élevage, transport, abattage).</p>
 							<p style="font-weight: bold;font-size: 20px;line-height: 1.2;">Agir avec Welfarm, c'est :</p>
 							<p style="line-height: 1.2;font-size: 16px;">- Lutter contre l'élevage intensif et ses dérives</p>
-							<p style="line-height: 1.2;font-size: 16px;">- Contribuer à l'amélioration des conditions de vie des animaux</p>
+							<p style="line-height: 1.2;font-size: 16px;">- Contribuer à l'amélioration des conditions de vie des animaux de ferme</p>
 							<p style="line-height: 1.2;font-size: 16px;">- Participer à l'émergence d'une société où l'animal est respecté pour sa valeur intrinsèque</p>
 							<div class="margin-bottom-2 margin-top-2">
 								<div style="display: table;">
