--- a/challenge/index.html
+++ b/challenge/index.html
@@ -344,7 +344,7 @@
 								<a href="https://donner.welfarm.fr/b?cid=28&lang=fr_FR"><div style="background-color: #f29400;min-width: 100px;color: white;padding: 7px;font-size: 20px;">JE FAIS UN DON</div></a>
 							</div>
 						</div>
-						<p style="color: white;font-family: 'Helvetica';font-size: 14px;margin-bottom: 35px;">© Welfarm 2017 | <a href="https://welfarm.fr/mentions-legales" style="color: white;">Informations légales</a></p>
+						<p style="color: white;font-family: 'Helvetica';font-size: 14px;margin-bottom: 35px;">© Welfarm 2017 | <a href="https://welfarm.fr/mentions-legales" target="_blank" style="color: white;">Informations légales</a></p>
 					</div>
 				</div>
 			</div>
