Updated 'challenge/index.html' via CloudCannon

--- a/challenge/index.html
+++ b/challenge/index.html
@@ -303,7 +303,7 @@
 											<input type="tel" id="f_tel" placeholder="Votre téléphone" name="phone">
 											<input type="hidden" name="language" value="fr_FR">
 											<button id="f_summit" type="button" class="button">JE M'INSCRIS</button>
-											<p class="small">En vous inscrivant au challenge ZéroFoieGras, vous acceptez de recevoir des emails de la part de WELFARM. Vous pouvez vous désinscrire à tout moment.</p>
+											<p class="small">En vous inscrivant au challenge #ZéroFoieGras, vous acceptez de recevoir des emails de la part de WELFARM. Vous pouvez vous désinscrire à tout moment.</p>
 										</div>
 									</form>
 								</div>
