--- a/challenge/index.html
+++ b/challenge/index.html
@@ -349,8 +349,14 @@
 				</div>
 			</div>
 		</footer>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-23237008-1"></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23237008-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+          gtag('config', 'UA-23237008-1');
+        </script>
 		<script src="http://code.jquery.com/jquery.min.js" type="text/javascript"></script>
 		<script src="js/intlTelInput.min.js"></script>
 		<script src="js/vendor/what-input.js"></script>
