Updated 'challenge/index.html' via CloudCannon

--- a/challenge/index.html
+++ b/challenge/index.html
@@ -262,7 +262,7 @@
 						</div>
 						<div id="endForm">
 							<div>
-								<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/WELFARM/petition_foiegras_2017/carte.png"/>
+								<iframe src="https://www.google.com/maps/d/embed?mid=1lm1WjlSeMV0SpI7XxXGk4KXBY1w" width="640" height="480"></iframe>
 							</div>
 							<h6 class="margin-bottom-2">Votre commune ou école ne s'est pas encore engagée ?<br />Contactez-les pour qu’elles franchissent le pas.<br /><br />Plus de renseignements en écrivant à <a href="mailto:benevoles@welfarm.fr">benevoles@welfarm.fr</a></h6>
 						</div>
