Updated 'challenge/index.html' via CloudCannon

--- a/challenge/index.html
+++ b/challenge/index.html
@@ -261,7 +261,7 @@
 							<h5 style="margin-bottom: 20px;">Restaurateurs, établissements publics, écoles… Retrouvez ci-dessous tous les professionnels qui relèvent le défi d’organiser des fêtes sans foie gras.</h5>
 						</div>
 						<div id="endForm">
-							<div>
+							<div style="overflow: hidden">
 								<iframe src="https://www.google.com/maps/d/embed?mid=1lm1WjlSeMV0SpI7XxXGk4KXBY1w" width="640" height="480"></iframe>
 							</div>
 							<h6 class="margin-bottom-2">Votre commune ou école ne s'est pas encore engagée ?<br />Contactez-les pour qu’elles franchissent le pas.<br /><br />Plus de renseignements en écrivant à <a href="mailto:benevoles@welfarm.fr">benevoles@welfarm.fr</a></h6>
