--- a/campagne/index.html
+++ b/campagne/index.html
@@ -138,7 +138,7 @@
 						<div class="row expanded text-center padding-top-3 margin-bottom-3" style="width: 95%;">
 							<div class="column small-10 medium-6 small-offset-1 medium-offset-0 large-4 text-center">
 								<a id="don_1" target="_blank" href="https://donner.welfarm.fr/b?cid=29&lang=fr_FR&amount=6000">
-									<div style="display: inline-block;" class="priceCard">
+									<div style="max-width: 300px; display: inline-block;" class="priceCard">
 										<div class="carte">
 											<p class="amount">60 €</p>
 											<p class="text">Je finance l'impression et la diffusion de documents destinés à sensibiliser le grand public au bien-être animal</p>
@@ -153,7 +153,7 @@
 							</div>
 							<div class="column small-10 medium-6 small-offset-1 medium-offset-0 large-4 text-center">
 								<a id="don_2" target="_blank" href="https://donner.welfarm.fr/b?cid=29&lang=fr_FR&amount=10000">
-									<div style="display: inline-block;" class="priceCard">
+									<div style="max-width: 300px; display: inline-block;" class="priceCard">
 										<div class="carte">
 											<p class="amount">100 €</p>
 											<p class="text">J'offre un mois de nourriture et de soin à un animal de la Hardonerie</p>
@@ -168,7 +168,7 @@
 							</div>
 							<div class="column small-10 medium-6 small-offset-1 medium-offset-3 large-offset-0 large-4 end text-center">
 								<a id="don_3" target="_blank" href="https://donner.welfarm.fr/b?cid=29&lang=fr_FR&amount=150000">
-									<div style="display: inline-block;" class="priceCard">
+									<div style="max-width: 300px; display: inline-block;" class="priceCard">
 										<div class="carte">
 											<p class="amount">150 €</p>
 											<p class="text">Je participe à une campagne d'affichage dans le métro</p>
@@ -185,7 +185,7 @@
 					</div>
 					<div class="row">
 						<div class="text-center columns small-10 small-offset-1">
-							<a target="_blank" href="https://donner.welfarm.fr/b?cid=29&lang=fr_FR"><img style="margin-bottom: 40px;" src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Noel-2017/btn_montant.png"></a>
+							<a target="_blank" href="https://donner.welfarm.fr/b?cid=29&lang=fr_FR"><img style="max-width: 400px; margin-bottom: 40px;" src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Noel-2017/btn_montant.png"></a>
 						</div>
 					</div>
 				</section>
