--- a/campagne/index.html
+++ b/campagne/index.html
@@ -7,6 +7,7 @@
 	<title></title>
 	<link rel="stylesheet" href="assets/css/foundation.min.css">
 	<link rel="stylesheet" href="assets/css/app.css">
+	<link rel="icon" type="image/png" href="../siteicon.png">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-23237008-1"></script>
 	<script>
@@ -185,7 +186,7 @@
 					</div>
 					<div class="row">
 						<div class="text-center columns small-10 small-offset-1">
-							<a target="_blank" href="https://donner.welfarm.fr/b?cid=29&lang=fr_FR"><img style="max-width: 400px; margin-bottom: 40px;" src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Noel-2017/btn_montant.png"></a>
+							<a target="_blank" href="https://donner.welfarm.fr/b?cid=29&lang=fr_FR"><img id="montant-choix" src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Noel-2017/btn_montant.png"></a>
 						</div>
 					</div>
 				</section>
