--- a/campagne/index.html
+++ b/campagne/index.html
@@ -64,7 +64,7 @@
 						</div>
 					</div>
 				</header>
-				<a id="sticky" href="#part-don"><img class="hide-for-small-only" src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Noel-2017/Btn-sticky.png"><img class="show-for-small-only" src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Noel-2017/mobile/sticky+mobile.png"></a>
+				<a id="sticky" target="_blank" href="https://donner.welfarm.fr/b?cid=29&lang=fr_FR&amount=7000"><img class="hide-for-small-only" src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Noel-2017/Btn-sticky.png"><img class="show-for-small-only" src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Noel-2017/mobile/sticky+mobile.png"></a>
 				<section id="combat">
 					<div class="row">
 						<div class="columns small-12 end text-center hide-for-small-only">
