--- a/campagne/index.html
+++ b/campagne/index.html
@@ -4,6 +4,11 @@
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta property="og:url" content="http://action.welfarm.fr/campagne" />
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="Agissez pour le bien être animal" />
+	<meta property="og:description" content="Mutilations, conditions de transport infernales, maltraitances, claustration, maladies... Ces souffrances sont intolérables. Mettez-y un terme en faisant un don déductible de votre impôt à Welfarm !" />
+	<meta property="og:image" content="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Noel-2017/Gads2-1.png" />
 	<title></title>
 	<link rel="stylesheet" href="assets/css/foundation.min.css">
 	<link rel="stylesheet" href="assets/css/app.css">
@@ -202,7 +207,7 @@
 					<div id="part1_footer" class="row">
 						<div class="columns small-12 medium-12 text-center large-6">
 							<p class="block">PARTAGEZ<span class="slash">/</span><span class="agissez">AGISSEZ</span></p>
-							<a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http://action.welfarm.fr//nomdelalandingpage"><img class="fb_twit block" src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Noel-2017/fb.png"></a>
+							<a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http://action.welfarm.fr/campagne"><img class="fb_twit block" src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Noel-2017/fb.png"></a>
 							<a target="_blank" href="https://twitter.com/intent/tweet?hashtags=;text=Mutilations, conditions de transport infernales, maltraitances... Ces souffrances sont intolérables. Il est temps d’agir pour les animaux sur%20url-landing"><img class="fb_twit block" src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Noel-2017/twit.png"></a>
 						</div>
 						<div id="DeC" class="columns small-12 medium-12 large-6 text-center end">
