change sharing title

--- a/campagne/index.html
+++ b/campagne/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta property="og:url" content="http://action.welfarm.fr/campagne" />
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="Agissez pour le bien être animal" />
+	<meta property="og:title" content="Welfarm - Agissez pour le bien être animal" />
 	<meta property="og:description" content="Mutilations, conditions de transport infernales, maltraitances, claustration, maladies... Ces souffrances sont intolérables. Mettez-y un terme en faisant un don déductible de votre impôt à Welfarm !" />
 	<meta property="og:image" content="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Noel-2017/Gads2-1.png" />
 	<title></title>
