--- a/inscription/index.html
+++ b/inscription/index.html
@@ -38,7 +38,7 @@
 					<input class="input mandatory" type="text" placeholder="VOTRE NOM *" name="lastname">
 					<input class="input" type="tel" id="f_tel" placeholder="+33 6 15 13 87 88" name="phone">
 					<input type="hidden" name="language" value="fr_FR">
-					<div class="g-recaptcha" data-callback="recaptchaCallback" data-sitekey="6Le4myIUAAAAAAIXsKiZPNe1G6r0J9clsFwer0oK"></div>
+					<!--<div class="g-recaptcha" data-callback="recaptchaCallback" data-sitekey="6Le4myIUAAAAAAIXsKiZPNe1G6r0J9clsFwer0oK"></div>-->
 					<div class="feedback error_mail">
 						Le format de l'email est incorrect
 					</div>
