Updated 'campagne/index.html' via CloudCannon

--- a/campagne/index.html
+++ b/campagne/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta property="og:url" content="http://action.welfarm.fr/campagne" />
+	<meta property="og:url" content="https://action.welfarm.fr/campagne" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Welfarm - Agissez pour le bien être animal" />
 	<meta property="og:description" content="Mutilations, conditions de transport infernales, maltraitances, claustration, maladies... Ces souffrances sont intolérables. Mettez-y un terme en faisant un don déductible de votre impôt à Welfarm !" />
@@ -224,7 +224,7 @@
 							<div id="part1_footer" class="row">
 								<div class="columns small-12 medium-12 text-center large-6">
 									<p class="block">PARTAGEZ<span class="slash">/</span><span class="agissez">AGISSEZ</span></p>
-									<a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http://action.welfarm.fr/campagne"><img class="fb_twit block" src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Noel-2017/fb.png"></a>
+									<a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://action.welfarm.fr/campagne"><img class="fb_twit block" src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Noel-2017/fb.png"></a>
 									<a target="_blank" href="https://twitter.com/intent/tweet?hashtags=;text=Mutilations, conditions de transport infernales, maltraitances... Ces souffrances sont intolérables. Il est temps d’agir pour les animaux sur%20url-landing"><img class="fb_twit block" src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Noel-2017/twit.png"></a>
 								</div>
 								<div id="DeC" class="columns small-12 medium-12 large-6 text-center end">
@@ -234,7 +234,7 @@
 							</div>
 							<div style="margin-top: 40px;" id="information" class="row">
 								<div class="small-10 small-offset-1 text-center">
-									<a target="_blank" href="http://action.welfarm.fr/inscription"><p style="color: black;padding-top: 20px;">RESTEZ <span style="color: #97BF0D;">INFORMÉ</span> DE NOS ACTIONS</p>
+									<a target="_blank" href="https://action.welfarm.fr/inscription"><p style="color: black;padding-top: 20px;">RESTEZ <span style="color: #97BF0D;">INFORMÉ</span> DE NOS ACTIONS</p>
 										<img style="max-width: 90px; margin-left: 10px;" src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Noel-2017/enveloppe.png"></a>
 									</div>
 									<div class="small-12 columns end">
@@ -260,7 +260,7 @@
 								</div>
 							</footer>
 						</div>
-						<script src="http://code.jquery.com/jquery.min.js" type="text/javascript"></script>
+						<script src="//code.jquery.com/jquery.min.js" type="text/javascript"></script>
 						<script src="assets/js/main.js"></script>
 					</body>
 					</html>
