--- a/inscription/index.html
+++ b/inscription/index.html
@@ -57,7 +57,7 @@
 			<p>© 2017 WELFARM</p>
 		</div>
 	</footer>
-	<script src="http://code.jquery.com/jquery.min.js" type="text/javascript"></script>
+	<script src="//code.jquery.com/jquery.min.js" type="text/javascript"></script>
 	<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 	<script src="assets/js/intlTelInput.min.js" type="text/javascript"></script>
 	<script src="assets/js/app.js" type="text/javascript"></script>
