--- a/fermesasang/index.html
+++ b/fermesasang/index.html
@@ -28,7 +28,14 @@
 			<div class="small-12 large-6 columns youtube text-center">
 				<h3 class="title"><span class="red">STOPPONS LE CALVAIRE</span><br />DE MILLIERS DE JUMENTS !</h3>
 				<p>Découvrez l’enquête</p>
-				<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/video-thumbnail.jpg" alt="Vidéo Youtube">
+				<a href="" id="yt-thumbnail">
+					<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/video-thumbnail.jpg" alt="Vidéo Youtube">
+				</a>
+				<div id="video-container">
+
+				</div>
+
+
 				<div class="row cta">
 					<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-partage-la-video.png" alt="Je partage la vidéo">
 					<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-decouvre-la-petition.png" alt="Je découvre la pétition">
