All OK except send Data

--- a/fermesasang/index.html
+++ b/fermesasang/index.html
@@ -1,11 +1,19 @@
-
 <!doctype html>
 <html class="no-js" lang="fr">
 <head>
 	<meta charset="utf-8" />
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="description" content="Saignées, avortées, maltraitées, des milliers de juments gestantes sont détenues dans les fermes à sang... Découvrez notre enquête" />
 	<title>Welfarm - Ferme à Sang</title>
+
+	<meta property="og:title" content="Mettons fin au calvaire de milliers de juments !" />
+	<meta property="og:type" content="website" />
+	<meta property="og:description" content="Saignées, avortées, maltraitées, des milliers de juments gestantes sont détenues dans les fermes à sang... Découvrez notre enquête" />
+	<meta property="og:url" content="https://action.welfarm.fr/fermesasang/" />
+	<meta property="og:image" content="https://s3.amazonaws.com/heroku-adfinitas-campaign/welfarm/fermesasang/WELFARM_Bannieres_Saignees_1200x628+(1).png" />
+
+
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.3/foundation.min.css" />
 	<link rel='stylesheet' href='assets/css/app.css' type='text/css'/>
 	<link rel='stylesheet' href='assets/css/remodal-default-theme.css' type='text/css'/>
@@ -13,22 +21,73 @@
 	<link rel='stylesheet' href='assets/css/intlTelInput.css' type='text/css'/>
 </head>
 <body>
+<div class="remodal petition" data-remodal-id="petition">
+	<button data-remodal-action="close" class="remodal-close" id="close"></button>
+	<h3 class="title">FERMES À SANG<br /><span class="red">STOPPONS LE CALVAIRE DE MILLIERS DE JUMENTS !</span></h3>
+	<p><br />À l’attention de XXXXX<br /><br />
+
+		<span class="bold">Aux côtés de Welfarm, je m’insurge contre le calvaire infligé aux juments dans des fermes à sang d’Uruguay et d’Argentine !</span><br />
+		Ces fermes prélèvent l’hormone eCG, présente dans le placenta des juments entre le 40ème et le 120ème jour de gestation pour la revendre<br />
+		à deux laboratoires pharmaceutiques qui produisent des médicaments vétérinaires : le français CEVA et l’espagnol HIPRA.<br />
+		Cette hormone, capable de déclencher et de synchroniser l’ovulation des truies, chèvres et brebis... permet de rentabiliser la production.<br /><br />
+
+		Mais à quel prix ? 10 litres de sang sont prélevés chaque semaine par jument pendant près de 3 mois consécutifs<br />
+		ce qui équivaut à prélever 1,5 litre de sang par semaine sur un homme adulte.<br /><br />
+
+		En plus d’être anémiées, les juments sont battues, blessées, privées de soin et avortées au 4ème mois de gestation<br />
+		dans les pires souffrances parce que le développement du fœtus bloque la production d’eCG.<br />
+		Alors que les mauvais traitements qu’elles subissent sont incompatibles avec les normes européennes de protection animale,<br />
+		il est inacceptable que des laboratoires puissent commercialiser en France des médicaments produits dans ces conditions.<br /><br />
+
+		Je joins donc ma voix à celle de Welfarm pour vous demander d’interdire aux laboratoires CEVA et HIPRA<br />
+		l’importation d’hormones eCG en provenance des fermes d’Argentine et d’Uruguay.<br /><br />
+
+		Avec Welfarm je dis STOP aux fermes à sang !<br /><br /></p>
+
+	<a><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-signe.png"></a>
+</div>
 <header>
 	<div class="row expanded header text-center">
 		<div class="small-12 large-2 columns logo">
-			<img id="logo" src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/logo.png" alt="Logo Welfarm">
-			<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/bt-don.png" alt="Je fais un don"  class="show-for-small-only">
+			<a href="https://welfarm.fr/" target="_blank"><img id="logo" src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/logo.png" alt="Logo Welfarm"></a>
+			<a href="https://donner.welfarm.fr/b?cid=30&amount=4000" target="_blank"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/bt-don.png" alt="Je fais un don"  class="show-for-small-only"></a>
 		</div>
 		<div class="large-4 columns rs">
-			<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/bt-don.png" alt="Je fais un don" class="hide-for-small-only">
-			<img class="rs-img" src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/fb.png" alt="Facebook Welfarm">
-			<img class="rs-img" src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/tw.png" alt="Twitter Welfarm">
+			<a href="https://donner.welfarm.fr/b?cid=30&amount=4000" target="_blank"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/bt-don.png" alt="Je fais un don" class="hide-for-small-only"></a>
+			<a href="https://www.facebook.com/WelfarmFR/" target="_blank"><img class="rs-img" src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/fb.png" alt="Facebook Welfarm"></a>
+			<a href="https://twitter.com/welfarmfr" target="_blank"><img class="rs-img" src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/tw.png" alt="Twitter Welfarm"></a>
 		</div>
+
+	</div>
+	<div class="row scoring">
+		<div class="large-4 columns text">
+			<p>Je recommanderais volontiers<br />WELFARM à mes proches.</p>
+		</div>
+		<div class="large-8 columns text-center">
+			<div class="row">
+				<p class="precision">Choisissez une note de 1 à 10. (1 étant la valeur minimum et 10 maximum)</p>
+			</div>
+			<div class="row score">
+				<p>pas du tout</p>
+				<a class="small" title="1">1</a>
+				<a title="2">2</a>
+				<a title="3">3</a>
+				<a title="4">4</a>
+				<a title="5">5</a>
+				<a title="6">6</a>
+				<a title="7">7</a>
+				<a title="8">8</a>
+				<a title="9">9</a>
+				<a class="big" title="10">10</a>
+				<p>tout à fait</p>
+			</div>
+		</div>
+
 	</div>
 </header>
 <section>
 	<div class="row expanded accroche">
-		<div class="row max-width">
+		<div class="row max-width first-screen">
 			<div class="small-12 large-6 columns youtube text-center">
 				<h3 class="title"><span class="red">STOPPONS LE CALVAIRE</span><br />DE MILLIERS DE JUMENTS !</h3>
 				<p>Découvrez l’enquête</p>
@@ -39,8 +98,8 @@
 
 
 				<div class="row cta">
-					<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-partage-la-video.png" alt="Je partage la vidéo">
-					<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-decouvre-la-petition.png" alt="Je découvre la pétition">
+					<a href="https://www.facebook.com/share.php?u=https://youtu.be/eOqN2EpXa2E" target="_blank"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-partage-la-video.png" alt="Je partage la vidéo"></a>
+					<a href="#petition"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-decouvre-la-petition.png" alt="Je découvre la pétition"></a>
 				</div>
 			</div>
 			<div class="small-12 large-6 columns text-center">
@@ -80,10 +139,59 @@
 					<button id="submit" type="submit">
 						<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-signe.png">
 					</button>
-						<p class="juridique">En cliquant, vous acceptez de recevoir les informations de Welfarm. Pour plus d’informations concernant vos données personnelles,  <a href="#modal">cliquez ici.</a></p>
+						<p class="juridique">En cliquant, vous acceptez de recevoir les informations de Welfarm. Pour plus d’informations concernant vos données personnelles,  <a href="#mentions">cliquez ici.</a></p>
 					</form>
 				</div>
 			</div>
+		</div>
+		<div class="row max-width second-screen">
+			<div class="container-title text-center">
+				<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/vous-avez-signe.png" alt="Vous avez signé notre pétition: Un grand merci !">
+				<p>Grâce à vous, nous aurons plus de poids pour mettre un terme au calvaire des milliers<br />de juments retenues, exploitées, maltraitées dans les fermes à sang.<br /><br />
+
+					Défendez les animaux d’élevage par un don !<br />
+					Pour faire cesser le calvaire des juments dans les fermes à sang et défendre la cause de tous les animaux d’élevage,<br />Welfarm compte essentiellement sur votre générosité. Merci de soutenir tous nos combats par un don.
+				</p>
+			</div>
+			<div class="row max-width container-don">
+				<div class="small-12 large-4 columns box-don text-center">
+					<div class="number">
+						<p>60</p>
+						<p class="euro">€</p>
+					</div>
+					<div class="other">
+						<p>Je finance l’impression et la diffusion de documents destinés à sensibiliser le grand public au bien-être animal</p>
+						<p class="deduction">soit <span>24.40<span class="euro">€</span></span><br />après déduction fiscale</p>
+					</div>
+
+					<a href="https://donner.welfarm.fr/b?cid=30&amount=6000" target="_blank"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-donne.png" alt="Je donne"></a>
+				</div>
+				<div class="small-12 large-4 columns box-don text-center">
+					<div class="number">
+						<p>100</p>
+						<p class="euro">€</p>
+					</div>
+					<div class="other margin">
+						<p>J’offre un mois de nourriture et de soin à un animal de la Hardonnerie</p>
+						<p class="deduction">soit <span>34<span class="euro">€</span></span><br />après déduction fiscale</p>
+					</div>
+
+					<a href="https://donner.welfarm.fr/b?cid=30&amount=10000" target="_blank"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-donne.png" alt="Je donne"></a>
+				</div>
+				<div class="small-12 large-4 columns box-don text-center">
+					<div class="number">
+						<p>150</p>
+						<p class="euro">€</p>
+					</div>
+					<div class="other margin">
+						<p>Je participe a une campagne d’affichage dans le métro</p>
+						<p class="deduction">soit <span>51<span class="euro">€</span></span><br />après déduction fiscale</p>
+					</div>
+
+					<a href="https://donner.welfarm.fr/b?cid=30&amount=15000" target="_blank"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-donne.png" alt="Je donne"></a>
+				</div>
+			</div>
+
 		</div>
 		<img class="transition" src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/rect-transition.png">
 	</div>
@@ -158,21 +266,21 @@
 						Le laboratoire MSD a déjà renoncé à se fournir dans ces fermes.<br /><br />
 						C’est pourquoi je joins aujourd’hui ma voix à celle de WELFARM pour vous demander de prendre un engagement : celui de ne pas acheter d’eCG auprès des fermes à sang d’Argentine et d’Uruguay.
 					</p>
-					<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/j-envoie-un-mail-a-HIPRA-et-CEVA.png" alt="J’envoie un mail à HIPRA et CEVA">
+					<a href="mailto:cyrille.faucher@hipra.com;marc.prikazsky@ceva.com"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/j-envoie-un-mail-a-HIPRA-et-CEVA.png" alt="J’envoie un mail à HIPRA et CEVA"></a>
 				</div>
 			</div>
 			<div class="small-12 large-6 columns">
 				<div class="row ceva">
-					<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-laisse-un-avis-CEVA.png" alt="Je laisse un AVIS sur la page de ceva">
-					<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/laisser-un-avis.png" alt="Laisser un avis">
+					<a href="https://www.facebook.com/pg/CevaSanteAnimaleGlobal/reviews/" target="_blank"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-laisse-un-avis-CEVA.png" alt="Je laisse un AVIS sur la page de ceva">
+					<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/laisser-un-avis.png" alt="Laisser un avis"></a>
 				</div>
 				<div class="row share">
 					<div class="row ">
 						<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-partage-l%E2%80%99enquete-sur-mon-compte-personnel.png" alt="Je partage l'enquête sur mon compte personnel">
 					</div>
 					<div class="row compte">
-						<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/fb-big.png" alt="Je partage sur Facebook">
-						<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/tw-big.png" alt="Je partage sur Twitter">
+						<a href="https://www.facebook.com/share.php?u=https://action.welfarm.fr/fermesasang/" target="_blank"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/fb-big.png" alt="Je partage sur Facebook"></a>
+						<a href="https://twitter.com/share?url=https://action.welfarm.fr/fermesasang/" target="_blank"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/tw-big.png" alt="Je partage sur Twitter"></a>
 					</div>
 				</div>
 			</div>
@@ -184,21 +292,22 @@
 	<div class="row expanded footer">
 		<div class="row max-width">
 			<div class="small-12 large-2 columns">
-				<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/logo.png" alt="Logo Welfarm">
+				<a href="https://welfarm.fr/" target="_blank"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/logo.png" alt="Logo Welfarm"></a>
 			</div>
 			<div class="small-12 large-1 columns dec">
-				<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/dec.png" alt="Don en confiance">
+				<a href="http://www.donenconfiance.org/" target="_blank"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/dec.png" alt="Don en confiance"></a>
+
 			</div>
 			<div class="small-12 large-6 columns text text-center">
 				<p>WELFARM - Protection mondiale des animaux de ferme agit depuis plus de 20 ans pour améliorer les conditions d’élevage, de transport et d’abattage des animaux. L’association, dont la mission est reconnue d’utilité publique, œuvre auprès du grand public, des éleveurs, des acteurs de l’agroalimentaire et de la grande distribution ainsi que des institutions publiques pour une meilleure prise en compte du bien-être animal.</p>
 				<p>L’association WELFARM est labellisée par le Don en confiance, organisme de labellisation et de contrôle des associations et fondations faisant appel aux dons. Ainsi l’association s’engage à respecter ses principes de transparence financière et de rigueur de gestion.</p>
-				<p>© WELFARM 2018 | Informations légales</p>
+				<p>© WELFARM 2018 | <a href="https://welfarm.fr/mentions-legales" target="_blank">Informations légales</a></p>
 			</div>
 			<div class="small-12 large-3 columns rs-footer text-center">
 				<p>NOUS SUIVRE SUR</p>
-				<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/fb.png" alt="Facebook Welfarm">
-				<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/tw.png" alt="Twitter Welfarm">
-				<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/yt.png" alt="Youtube Welfarm">
+				<a href="https://www.facebook.com/WelfarmFR/" target="_blank"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/fb.png" alt="Facebook Welfarm"></a>
+				<a href="https://twitter.com/welfarmfr" target="_blank"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/tw.png" alt="Twitter Welfarm"></a>
+				<a href="https://www.youtube.com/channel/UCiJAjlUSl1cGrQzkDPsw7ng" target="_blank"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/yt.png" alt="Youtube Welfarm"></a>
 			</div>
 		</div>
 	</div>
@@ -219,6 +328,17 @@
     };
     firebase.initializeApp(config);
 </script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-5ZGHT4Q');</script>
+<!-- End Google Tag Manager -->
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5ZGHT4Q"
+				  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
 <script src="assets/js/app.js" type="text/javascript"></script>
 <script src="assets/js/remodal.js" type="text/javascript"></script>
