All OK except send Data

--- a/fermesasang/index.html
+++ b/fermesasang/index.html
@@ -139,7 +139,12 @@
 					<button id="submit" type="submit">
 						<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-signe.png">
 					</button>
-						<p class="juridique">En cliquant, vous acceptez de recevoir les informations de Welfarm. Pour plus d’informations concernant vos données personnelles,  <a href="#mentions">cliquez ici.</a></p>
+						<p class="juridique">En cliquant, vous acceptez de recevoir les informations de Welfarm. Pour plus d’informations concernant vos données personnelles,  <a href="https://welfarm.fr/mentions-legales" target="_blank">cliquez ici.</a></p>
+						<div class="optin">
+							<input type="checkbox" id="f_optin">
+							<label for="f_optin">Je m’oppose à recevoir de la prospection par téléphone, courrier postal, email, sms et/ou mms de la part de l’association</label>
+						</div>
+
 					</form>
 				</div>
 			</div>
@@ -191,6 +196,7 @@
 					<a href="https://donner.welfarm.fr/b?cid=30&amount=15000" target="_blank"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-donne.png" alt="Je donne"></a>
 				</div>
 			</div>
+
 
 		</div>
 		<img class="transition" src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/rect-transition.png">
