--- a/fermesasang/index.html
+++ b/fermesasang/index.html
@@ -48,7 +48,7 @@
 
 		Avec Welfarm je dis STOP aux fermes à sang !<br /><br /></p>
 
-	<a href="https://action.welfarm.fr/fermesasang/"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-signe.png"></a>
+	<a href="https://action.welfarm.fr/fermesasang/#"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-signe.png"></a>
 </div>
 <header>
 	<div class="row expanded header text-center">
