Updated 'fermesasang/index.html' via CloudCannon

--- a/fermesasang/index.html
+++ b/fermesasang/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="description" content="Saignées, avortées, maltraitées, des milliers de juments gestantes sont détenues dans les fermes à sang... Découvrez notre enquête" />
-	<title>Welfarm - Ferme à Sang</title>
+	<title>Welfarm - Fermes à Sang</title>
 
 	<meta property="og:title" content="Mettons fin au calvaire de milliers de juments !" />
 	<meta property="og:type" content="website" />
