--- a/fermesasang/index.html
+++ b/fermesasang/index.html
@@ -102,7 +102,7 @@
 
 
 				<div class="row cta">
-					<a href="https://www.facebook.com/share.php?u=https://youtu.be/eOqN2EpXa2E" target="_blank"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-partage-la-video.png" alt="Je partage la vidéo"></a>
+					<a href="https://www.facebook.com/share.php?u=https://youtu.be/e78FyME-mPg" target="_blank"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-partage-la-video.png" alt="Je partage la vidéo"></a>
 					<a href="#petition"><img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-decouvre-la-petition.png" alt="Je découvre la pétition"></a>
 				</div>
 			</div>
