--- a/fermesasang/index.html
+++ b/fermesasang/index.html
@@ -13,6 +13,7 @@
 	<meta property="og:url" content="https://action.welfarm.fr/fermesasang/" />
 	<meta property="og:image" content="https://s3.amazonaws.com/heroku-adfinitas-campaign/welfarm/fermesasang/WELFARM_Bannieres_Saignees_1200x628+(1).png" />
 
+	<link rel="icon" type="image/png" href="siteicon.png" />
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.3/foundation.min.css" />
 	<link rel='stylesheet' href='assets/css/app.css' type='text/css'/>
