--- a/fermesasang/index.html
+++ b/fermesasang/index.html
@@ -24,7 +24,7 @@
 <body>
 <div class="remodal petition" data-remodal-id="petition">
 	<button data-remodal-action="close" class="remodal-close" id="close"></button>
-	<h3 class="title">FERMES À SANG<br /><span class="red">STOP AU CALVAIRE DE MILLIERS DE JUMENTS !</span></h3>
+	<h3 class="title">FERMES À SANG<br /><span class="red">STOP AU CALVAIRE DE MILLIERS DE JUMENTS&nbsp;!</span></h3>
 	<p><br />À l’attention des laboratoires CEVA et HIPRA.<br /><br />
 
 		J’ai appris avec effroi le traitement réservé aux juments au sein des fermes à sang d’Argentine et d’Uruguay.<br />
