--- a/questionnaire/index.html
+++ b/questionnaire/index.html
@@ -107,7 +107,7 @@
 			</div>
 			<div class="row container-question text-center">
 				<p class="precision">Choisissez une note de 1 à 10, 1 étant la valeur minimum et 10 la valeur maximum</p>
-				<div class="container-answer">
+				<div class="container-answer hide-for-small-only">
 					<p>pas du tout</p>
 					<a title="1" href="" class="small">01</a>
 					<a title="2" href="">02</a>
@@ -121,6 +121,26 @@
 					<a title="10" href="" class="small">10</a>
 					<p>tout à fait</p>
 				</div>
+				<div class="container-answer show-for-small-only">
+					<div class="row in-small">
+						<a title="1" href="" class="small">01</a>
+						<a title="2" href="">02</a>
+						<a title="3" href="">03</a>
+					</div>
+					<div class="row in-small">
+						<a title="4" href="">04</a>
+						<a title="5" href="">05</a>
+						<a title="6" href="">06</a>
+					</div>
+					<div class="row in-small">
+						<a title="7" href="">07</a>
+						<a title="8" href="">08</a>
+						<a title="9" href="">09</a>
+					</div>
+					<div class="row in-small">
+						<a title="10" href="" class="small">10</a>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -130,7 +150,7 @@
 <section id="merci">
 	<div class="row expanded">
 		<div class="row max-width">
-			<div class="row">
+			<div class="row container-title">
 				<p class="title orange">VOUS AVEZ FAIT ENTENDRE VOTRE VOIX :<br />FELICITATIONS ET MERCI !</p>
 
 				<p>Vous avez terminé de compléter votre questionnaire. Grâce à vos réponses précieuses,<br />nous vous connaissons mieux et nous pourrons être plus proches de vos attentes dans nos communications.<br /><br />
@@ -141,20 +161,40 @@
 					Merci de nous aider si vous le pouvez !
 				</p>
 			</div>
-			<div class="row">
-				<div class="small-12 large-4 columns container-don">
+			<div class="row text-center">
+				<div class="container-don">
 					<div class="number">
 						<p>60</p>
 						<p class="euro">€</p>
 					</div>
 					<div class="other">
 						<p>Je finance l’impression et la diffusion de documents destinés à sensibiliser le grand public au bien-être animal</p>
-						<p class="deduction">soit <span>24.40€</span><br />après déduction fiscale</p>
+						<p class="deduction">soit <span>24.40<span class="small">€</span></span><br />après déduction fiscale</p>
 					</div>
 					<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-donne-orange.png" alt="Je donne">
 				</div>
-				<div class="small-12 large-4 columns container-don"></div>
-				<div class="small-12 large-4 columns container-don"></div>
+				<div class="container-don">
+					<div class="number">
+						<p>100</p>
+						<p class="euro">€</p>
+					</div>
+					<div class="other">
+						<p>J’offre un mois de nourriture et de soin à un animal de la Hardonnerie</p>
+						<p class="deduction margin-38">soit <span>34<span class="small">€</span></span><br />après déduction fiscale</p>
+					</div>
+					<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-donne-orange.png" alt="Je donne">
+				</div>
+				<div class="container-don">
+					<div class="number">
+						<p>150</p>
+						<p class="euro">€</p>
+					</div>
+					<div class="other">
+						<p>Je participe a une campagne d’affichage dans le métro</p>
+						<p class="deduction margin-60">soit <span>51<span class="small">€</span></span><br />après déduction fiscale</p>
+					</div>
+					<img src="https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/je-donne-orange.png" alt="Je donne">
+				</div>
 
 			</div>
 
